<resources>
    <string name="app_name">Tablero Kanban</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuraciones</string>

    <string name="menu_proyectos">Proyectos</string>
    <string name="menu_perfil">Mi Perfil</string>
    <string name="menu_informacion">Informacion</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    /*Proyecto fragment*/
    <string name="tituloProyecto">Proyectos personales</string>

    /*Informacion fragment*/
    <string name="desarrolladores">Desarrolladores: </string>
    <string name="desarrollador1">Soraire Miguel Emmanuel</string>
    <string name="desarrollador2">Rodriguez Jonatan</string>
    <string name="nombreMateria">Aplicaciones Moviles</string>
    <string name="materia">Materia: </string>
    <string name="trabajoFinal">Trabajo Final</string>
    <string name="utn">Universidad Tecnologica Nacional</string>
    <string name="visitanos">Visitanos</string>

    /*Mi Perfil fragment*/
    <string name="usu">Usuario: </string>
    <string name="equipo">Equipo: </string>

    /*Nuevo Proyecto*/
    <string name="nomproyect">Nombre del Proyecto: </string>

    /*Tareas*/
    <string name="iniciada">Iniciada</string>
    <string name="ejecucion">Ejecutando</string>
    <string name="espera">Para Testear</string>
    <string name="testeando">Testeando</string>
    <string name="finalizada">Finalizada</string>

    /*registro*/
    <string name="inicio">Iniciar Sesion</string>
    <string name="usuario">Usuario (e-mail)</string>
    <string name="contraseña">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrarse</string>
    <string name="ingresarSinRegistro">Ingresar Sin Registro</string>
    <string name="nombre">Nombre: </string>
    <string name="aoellido">Apellido</string>
    <string name="contrasenia">Contraseña</string>
    <string name="grupo">Grupo</string>
    <string name="telefono">Telefono:</string>
    <string name="mail">E-mail</string>
    <string name="Elija">Elija un Equipo</string>
    <string name="todo">TODO</string>
    <string name="nombres">Nombre</string>
    <string name="cargarImagen">Cargar Imagen . . . </string>

    /*busqueda*/
    <string name="busqueda">Busquemos . . .</string>

    /*tarea*/
    <string name="titulo">Titulo: </string>
    <string name="descripcion">Descripcion: </string>
    <string name="prioridad">Prioridad: </string>
    <string name="fecha">Creado: </string>
    <string name="estado">Estado: </string>
    <string name="creador">Creador: </string>
    <string name="trabajando">Asignado a: </string>

    /*actualizar tarea*/
    <string name="actualizarPerfil">Actualizar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    /*tarea*/
    <string name="crearTarea">Crear Tarea</string>
    <string name="title_activity_crear_proyecto">CrearProyecto</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_configuracion">Configuracion</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="crear">CREAR</string>
    <string name="modificar">Modificar</string>
    <string name="title_activity_tareas">TareasActivity</string>
    <string name="search_hint">Buscar...</string>
    <string name="titulo_de_la_tarea">Titulo de la Tarea</string>
    <string name="descripcion_de_la_tarea">Descripcion de la Tarea</string>
    <string name="cancelar">Cancelar</string>
    <string name="soraire_emmanuel_rodriguez_jonatan"><![CDATA[SORAIRE EMMANUEL & RODRIGUEZ JONATAN]]></string>
    <string name="creado_por">creado por</string>
    <string name="resultado">Resultado</string>
    <string name="estadobusqueda">Estado</string>
    <string name="realizar">Realizar</string>
    <string name="mis_tareas_pendientes">Mis Tareas Pendientes</string>
</resources>
