<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.organizadortareaskanban.ui.proyectos.ProyectoFragment"
        android:label="@string/menu_proyectos"
        tools:layout="@layout/fragment_proyecto">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.organizadortareaskanban.ui.proyectos.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.organizadortareaskanban.ui.miperfil.MiPerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_miperfil" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.organizadortareaskanban.ui.informacion.InformacionFragment"
        android:label="@string/menu_informacion"
        tools:layout="@layout/fragment_informacion" />
</navigation>