<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/fondoregistro"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imagenId"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        android:onClick="cargarImagen"
        android:padding="20dp"
        android:src="@drawable/imagen_no_disponible" />

    <EditText
        android:id="@+id/usuario"
        android:padding="10dp"
        android:textColor="@color/cardview_light_background"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/usuario"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="78dp"
        android:importantForAutofill="no" />

    <EditText
        android:padding="10dp"
        android:textColor="@color/cardview_light_background"
        android:id="@+id/nombres"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nombres"
        android:importantForAutofill="no" />

    <Spinner
        android:id="@+id/spinner"
        style="?android:attr/spinnerDropDownItemStyle"
        android:layout_width="250dp"
        android:textAlignment="center"
        android:foregroundTint="#FFFFFF"
        android:layout_height="44dp"
        android:spinnerMode="dialog"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/telefono"
        android:textColor="@color/cardview_light_background"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="phone" />

</LinearLayout>