<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textColor="#CFCFCF"
    android:background="@drawable/fondoregistro"
    tools:context=".ui.miperfil.MiPerfilFragment">
    <ImageView
        android:id="@+id/miPerfilImagen"
        android:layout_marginTop="20dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/imgperfilprueba"
        android:layout_gravity="center"
        />
<LinearLayout
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/usuarioEtiqueta"
        android:layout_width="85dp"
        android:textColor="#CFCFCF"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/usu"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/usuarioMiPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="#CCCFCFCF"
        android:text="Emma_89_75@gmail.com"
        android:textAlignment="center"
        android:textSize="15sp"
        />
</LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/nombre"
        android:textColor="#CFCFCF"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/nombre"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/nombreMiPerfil"
        android:textColor="#CCCFCFCF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Soraire Miguel Emmanuel"
        android:textAlignment="center"
        android:textSize="15sp"
        />
    </LinearLayout>

 <LinearLayout
     android:layout_marginTop="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
     <TextView
         android:layout_width="85dp"
         android:textColor="#CFCFCF"
         android:layout_height="wrap_content"
         android:text="@string/equipo"
         android:textSize="20dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:textAlignment="textStart"
         />
     <TextView
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:textColor="#CCCFCFCF"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:text="Equipo 1"
         android:id="@+id/equipoMiPerfil"
         android:textSize="15sp"
         />

 </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="#CFCFCF"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textSize="20sp"
            />


        <TextView
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="#CCCFCFCF"
            android:layout_width="140dp"
            android:id="@+id/telefonoMiPerfil"
            android:layout_height="wrap_content"
            android:text="2213048068"
            android:textSize="15sp"
            />
        <!--
        <Button
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modificar"
            android:background="@drawable/ovalo"
            android:textColor="#B5A5790A"
            />-->
    </LinearLayout>
</LinearLayout>