<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/fondoregistro"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.tareas.TareasActivity">

    <LinearLayout
        android:id="@+id/resultadosBusqueda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:background="@color/cardview_light_background"
        android:layout_marginBottom="20dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:cardBackgroundColor="@color/cardview_light_background"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/cardview_dark_background"
                android:layout_marginStart="10dp"
                android:text="@string/resultado"/>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/cardview_shadow_start_color"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerBusquedaTarea"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

<LinearLayout
    android:id="@+id/todaslasTareas"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:orientation="horizontal">

           <LinearLayout
               android:layout_width="300dp"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               android:orientation="vertical"
               android:layout_marginLeft="20dp"
               android:background="@color/cardview_light_background"
               android:layout_marginBottom="20dp">

               <androidx.cardview.widget.CardView
                   android:layout_width="match_parent"
                   android:layout_height="40dp"
                   app:cardBackgroundColor="@color/cardview_light_background"
                   >
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="3dp"
                   android:textSize="25sp"
                   android:textStyle="bold"
                   android:textColor="@color/cardview_dark_background"
                   android:layout_marginStart="10dp"
                   android:text="@string/iniciada"/>
               </androidx.cardview.widget.CardView>
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="5dp"
                  android:background="@color/cardview_shadow_start_color"
                  />
               <androidx.recyclerview.widget.RecyclerView
                   android:id="@+id/recyclerTareasIniciadas"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent" />
           </LinearLayout>

           <LinearLayout
               android:layout_width="300dp"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               android:orientation="vertical"
               android:layout_marginLeft="20dp"
               android:background="@color/cardview_light_background"
               android:layout_marginBottom="20dp">
               <androidx.cardview.widget.CardView
                   android:layout_width="match_parent"
                   android:layout_height="40dp"
                   app:cardBackgroundColor="@color/cardview_light_background"
                   >
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="3dp"
                       android:textSize="25sp"
                       android:textStyle="bold"
                       android:textColor="@color/cardview_dark_background"
                       android:layout_marginStart="10dp"
                       android:text="@string/ejecucion"/>
               </androidx.cardview.widget.CardView>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="5dp"
                   android:background="@color/cardview_shadow_start_color"
                   />
               <androidx.recyclerview.widget.RecyclerView
                   android:id="@+id/recyclerTareasProcesando"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent" />
           </LinearLayout>
           <LinearLayout
               android:layout_width="300dp"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               android:orientation="vertical"
               android:layout_marginLeft="20dp"
               android:background="@color/cardview_light_background"
               android:layout_marginBottom="20dp">
               <androidx.cardview.widget.CardView
                   android:layout_width="match_parent"
                   android:layout_height="40dp"
                   app:cardBackgroundColor="@color/cardview_light_background"
                   >
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="3dp"
                       android:textSize="25sp"
                       android:textStyle="bold"
                       android:textColor="@color/cardview_dark_background"
                       android:layout_marginStart="10dp"
                       android:text="@string/espera"/>
               </androidx.cardview.widget.CardView>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="5dp"
                   android:background="@color/cardview_shadow_start_color"
                   />
               <androidx.recyclerview.widget.RecyclerView
                   android:id="@+id/recyclerTareasEsperando"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent" />
           </LinearLayout>
           <LinearLayout
               android:layout_width="300dp"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               android:orientation="vertical"
               android:layout_marginLeft="20dp"
               android:background="@color/cardview_light_background"
               android:layout_marginBottom="20dp">
               <androidx.cardview.widget.CardView
                   android:layout_width="match_parent"
                   android:layout_height="40dp"
                   app:cardBackgroundColor="@color/cardview_light_background"
                   >
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="3dp"
                       android:textSize="25sp"
                       android:textStyle="bold"
                       android:textColor="@color/cardview_dark_background"
                       android:layout_marginStart="10dp"
                       android:text="@string/testeando"/>
               </androidx.cardview.widget.CardView>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="5dp"
                   android:background="@color/cardview_shadow_start_color"
                   />
               <androidx.recyclerview.widget.RecyclerView
                   android:id="@+id/recyclerTareasRevisando"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent" />
           </LinearLayout>
           <LinearLayout
               android:layout_width="300dp"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               android:orientation="vertical"
               android:layout_marginLeft="20dp"
               android:background="@color/cardview_light_background"
               android:layout_marginBottom="20dp">
               <androidx.cardview.widget.CardView
                   android:layout_width="match_parent"
                   android:layout_height="40dp"
                   app:cardBackgroundColor="@color/cardview_light_background"
                   >
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="3dp"
                       android:textSize="25sp"
                       android:textStyle="bold"
                       android:textColor="@color/cardview_dark_background"
                       android:layout_marginStart="10dp"
                       android:text="@string/finalizada"/>
               </androidx.cardview.widget.CardView>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="5dp"
                   android:background="@color/cardview_shadow_start_color"
                   />
               <androidx.recyclerview.widget.RecyclerView
                   android:id="@+id/recyclerTareasFinalizada"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent" />
           </LinearLayout>


       </LinearLayout>

    </HorizontalScrollView>
</LinearLayout>
</LinearLayout>